--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-icons": "^5.5.0",
     "react-responsive": "^10.0.1",
     "react-router-dom": "^7.9.4",
-    "react-toastify": "^11.0.5"
+    "react-toastify": "^11.0.5",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
