--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,8 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
-    "mongoose": "^8.19.1"
+    "mongoose": "^8.19.1",
+    "jsonwebtoken": "^9.0.2",
+    "lodash": "^4.17.21"
   }
 }
