--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "react-icons": "^5.5.0",
     "react-responsive": "^10.0.1",
     "react-router-dom": "^7.9.4",
+    "react-slick": "^0.31.0",
     "react-toastify": "^11.0.5",
+    "slick-carousel": "^1.8.1",
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
