--- a/package.json
+++ b/package.json
@@ -13,16 +13,20 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^7.0.1",
     "@heroicons/react": "^2.2.0",
-    "axios": "^1.12.2",
+    "axios": "^1.13.2",
+    "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "chart.js": "^4.5.0",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dexie": "^4.2.0",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "framer-motion": "^12.23.25",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
-    "mongoose": "^8.19.1",
+    "mongoose": "^8.20.1",
+    "nodemailer": "^7.0.11",
     "react": "^19.1.1",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.1",
