--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^7.0.1",
     "@heroicons/react": "^2.2.0",
+    "@supabase/supabase-js": "^2.86.0",
     "axios": "^1.13.2",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
@@ -26,6 +27,7 @@
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "mongoose": "^8.20.1",
+    "multer": "^2.0.2",
     "nodemailer": "^7.0.11",
     "react": "^19.1.1",
     "react-chartjs-2": "^5.3.0",
