--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@fortawesome/fontawesome-free": "^7.0.1",
     "@heroicons/react": "^2.2.0",
     "@supabase/supabase-js": "^2.86.0",
+    "@tensorflow-models/handpose": "^0.1.0",
+    "@tensorflow/tfjs": "^4.22.0",
     "axios": "^1.13.2",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
@@ -38,6 +40,7 @@
     "react-router-dom": "^7.9.4",
     "react-slick": "^0.31.0",
     "react-toastify": "^11.0.5",
+    "react-webcam": "^7.2.0",
     "slick-carousel": "^1.8.1",
     "socket.io-client": "^4.8.1"
   },
