--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^7.0.1",
     "@heroicons/react": "^2.2.0",
+    "@mui/icons-material": "^7.3.6",
+    "@mui/material": "^7.3.6",
     "@supabase/supabase-js": "^2.86.0",
     "@tensorflow-models/handpose": "^0.1.0",
     "@tensorflow/tfjs": "^4.22.0",
@@ -22,6 +24,7 @@
     "chart.js": "^4.5.0",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
+    "date-fns": "^4.1.0",
     "dexie": "^4.2.0",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
@@ -34,6 +37,7 @@
     "react": "^19.1.1",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.1",
+    "react-dropzone": "^14.3.8",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-responsive": "^10.0.1",
