--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-slick": "^0.31.0",
     "react-toastify": "^11.0.5",
     "react-webcam": "^7.2.0",
+    "recharts": "^3.5.1",
     "slick-carousel": "^1.8.1",
     "socket.io-client": "^4.8.1"
   },
