--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "date-fns": "^4.1.0",
+    "device-detector-js": "^3.0.3",
     "dexie": "^4.2.0",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
