--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "mongoose": "^8.19.1",
+    "multer": "^2.0.2",
     "ua-parser-js": "^2.0.6",
     "uuid": "^13.0.0"
   }
