--- a/package.json
+++ b/package.json
@@ -30,11 +30,16 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "framer-motion": "^12.23.25",
+    "imagemagick": "^0.1.3",
+    "img2pdf": "^1.0.11",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
+    "mammoth": "^1.11.0",
     "mongoose": "^8.20.1",
     "multer": "^2.0.2",
     "nodemailer": "^7.0.11",
+    "pdf-lib": "^1.17.1",
+    "pdfkit": "^0.17.2",
     "react": "^19.1.1",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.1",
@@ -47,8 +52,10 @@
     "react-toastify": "^11.0.5",
     "react-webcam": "^7.2.0",
     "recharts": "^3.5.1",
+    "sharp": "^0.34.5",
     "slick-carousel": "^1.8.1",
-    "socket.io-client": "^4.8.1"
+    "socket.io-client": "^4.8.1",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
