--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
     "lodash": "^4.17.21",
     "mongoose": "^8.19.1",
     "multer": "^2.0.2",
+    "pdfkit": "^0.17.2",
     "pm2": "^6.0.14",
     "ua-parser-js": "^2.0.6",
     "uuid": "^13.0.0"
