--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,7 @@
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
-    "docx": "^9.5.1",
+    "docx": "8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
@@ -27,7 +27,6 @@
     "mammoth": "^1.11.0",
     "mongoose": "^8.19.1",
     "multer": "^2.0.2",
-    "officegen": "^0.6.5",
     "pdf-lib": "^1.17.1",
     "pdfkit": "^0.17.2",
     "pm2": "^6.0.14",
