--- a/package.json
+++ b/package.json
@@ -27,12 +27,17 @@
     "date-fns": "^4.1.0",
     "device-detector-js": "^3.0.3",
     "dexie": "^4.2.0",
+    "docxtemplater": "^3.67.6",
     "dotenv": "^17.2.3",
+    "exceljs": "^4.4.0",
     "express": "^5.1.0",
+    "file-saver": "^2.0.5",
     "framer-motion": "^12.23.25",
     "imagemagick": "^0.1.3",
     "img2pdf": "^1.0.11",
     "jsonwebtoken": "^9.0.2",
+    "jspdf": "^4.0.0",
+    "jspdf-autotable": "^5.0.7",
     "lodash": "^4.17.21",
     "mammoth": "^1.11.0",
     "mongoose": "^8.20.1",
@@ -41,6 +46,7 @@
     "officegen": "^0.6.5",
     "pdf-lib": "^1.17.1",
     "pdfkit": "^0.17.2",
+    "pizzip": "^3.2.0",
     "react": "^19.1.1",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.1",
@@ -56,7 +62,8 @@
     "sharp": "^0.34.5",
     "slick-carousel": "^1.8.1",
     "socket.io-client": "^4.8.1",
-    "uuid": "^13.0.0"
+    "uuid": "^13.0.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
