--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "@tensorflow-models/handpose": "^0.1.0",
     "@tensorflow/tfjs": "^4.22.0",
     "axios": "^1.13.2",
+    "baseline-browser-mapping": "^2.9.19",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
+    "caniuse-lite": "^1.0.30001769",
     "chart.js": "^4.5.0",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
